samples/_failures_safe/1760960581_beafe4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5d7092b.c: In function ‘main’:
./samples/SAFE/__tmp_d5d7092b.c:166:5: error: expected declaration or statement at end of input
  166 |     printf("BFS from different starting points:\n");
      |     ^~~~~~
